force-app/main/default/objects/Retail_Location__c/Retail_Location__c.object-meta.xml
<CustomObject>
    <label>Retail Location</label>
    <nameField>
        <label>Retail Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>