force-app/main/default/objects/Retail_Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>