force-app/main/default/objects/Retail_Location__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Retail Locations</relationshipLabel>
    <relationshipName>Retail_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>