force-app/main/default/objects/Retail_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lot__c</columns>
    <columns>Region__c</columns>
    <columns>Current_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>